# NBody-CUDA

./: CMakeLists.txt  ReportTemplate.docx  ReportTemplate.odt  draw.h  main.cu  simulation.cu  utils.h
